// File: sic-spring/sic/src/main/java/com/softinter/sicapi/entity/pm/PmDiagramTab.java
package com.softinter.sicapi.entity.pm;

import java.util.ArrayList;
import java.util.List;
import java.util.Map;
import java.util.UUID;

import org.hibernate.annotations.JdbcTypeCode;
import org.hibernate.type.SqlTypes;

import com.softinter.sicapi.entity.base.BaseEntity;

import jakarta.persistence.CascadeType;
import jakarta.persistence.Column;
import jakarta.persistence.Entity;
import jakarta.persistence.OneToMany;
import jakarta.persistence.Table;
import lombok.Data;
import lombok.EqualsAndHashCode;

@Data
@EqualsAndHashCode(callSuper = true)
@Entity
@Table(name = "pm_diagram")
public class PmDiagramTab extends BaseEntity {

    @Column(name = "business_id")
    private UUID businessId;

    @Column(name = "user_id", nullable = false)
    private String userId;

    @Column(name = "project_id", nullable = false)   
    private UUID projectId;

    @Column(nullable = false, length = 255)
    private String name;

    @Column(name = "diagram_code", length = 50)
    private String diagramCode;

    @Column(name = "diagram_type", nullable = false, length = 50)
    private String diagramType;

    @Column(name = "mermaid_script", columnDefinition = "TEXT")
    private String mermaidScript;

    @JdbcTypeCode(SqlTypes.JSON)
    @Column(columnDefinition = "JSONB")
    private Map<String, Object> metadata;

    @JdbcTypeCode(SqlTypes.JSON)
    @Column(name = "graph_data", columnDefinition = "JSONB")
    private Map<String, Object> graphData;

    @Column(name = "sort_order")
    private Integer sortOrder = 0;

    @Column(name = "is_active")
    private Boolean isActive = true;

    @OneToMany(mappedBy = "diagram", cascade = CascadeType.ALL, orphanRemoval = true)
    private List<PmDiagramVersion> versions = new ArrayList<>();

    @OneToMany(mappedBy = "diagram", cascade = CascadeType.ALL, orphanRemoval = true)
    private List<PmDiagramChat> chatMessages = new ArrayList<>();
}